set(HEADER
    ${CMAKE_CURRENT_SOURCE_DIR}/list.h
    ${CMAKE_CURRENT_SOURCE_DIR}/vector.h)

set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/list.c
    ${CMAKE_CURRENT_SOURCE_DIR}/vector.c)

add_library(${OUTPUT_LIB} STATIC ${SOURCE})

install(FILES ${HEADER} DESTINATION ${INSTALL_DIR}/include)
install(TARGETS ${OUTPUT_LIB} ARCHIVE DESTINATION ${INSTALL_DIR}/lib)